--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#IDE
+.idea/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,6 +9,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+notes.md
 .Python
 build/
 develop-eggs/
@@ -56,6 +59,7 @@ cover/
 *.pot
 
 # Django stuff:
+media/
 *.log
 local_settings.py
 *.sqlite3
